fixed vertical gradient on mobile

--- a/style.css
+++ b/style.css
@@ -177,8 +177,7 @@ img {
   backdrop-filter: blur(7px);
   box-shadow: 0 0 12px 0 rgb(82, 82, 82);
 
-  /* border-left: 20px solid var(--accent); */
-  height: auto; /* testing w/ .sample */
+  height: auto; /* testing w/ .desc-grad */
   overflow: hidden;
 }
 
@@ -251,8 +250,11 @@ button {
   .desc {
     width: 95vw;
     font-size: 2rem;
-    border-left-width: 11px;
     border-radius: 10px;
+  }
+
+  .desc-grad {
+    width: 11px;
   }
 
   .desc-text {
